up pkg deps and tests

--- a/package.json
+++ b/package.json
@@ -17,25 +17,27 @@
   ],
   "dependencies": {
     "graphql-request": "^1.8.2",
-    "js-yaml": "^3.12.0",
-    "lodash": "^4.17.10",
+    "js-yaml": "^3.13.0",
+    "lodash": "^4.17.11",
     "memorystream": "^0.3.1",
     "promise-streams": "^2.1.1",
-    "query-string": "^6.1.0",
-    "readdirp": "^2.1.0",
-    "through2": "^2.0.3",
-    "typescript": "^2.9.2",
+    "query-string": "^6.4.2",
+    "readdirp": "^2.2.1",
+    "through2": "^3.0.1",
+    "typescript": "^3.4.1",
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "@types/mocha": "^2.2.48",
-    "@types/node": "^9.4.5",
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^11.13.0",
     "@types/should": "^13.0.0",
-    "coveralls": "2.11.9",
-    "istanbul": "^0.4.3",
-    "mocha": "^2.5.3",
-    "nock": "^8.0.0",
-    "should": "^13.2.1"
+    "coveralls": "^3.0.3",
+    "istanbul": "^0.4.5",
+    "mocha": "^6.0.2",
+    "nock": "^10.0.6",
+    "should": "^13.2.3",
+    "tslint": "^5.15.0",
+    "typescript": "^3.4.1"
   },
   "scripts": {
     "tsctests": "tsc test/*.ts --module commonjs -target ES6",
