--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@restorecommerce/gql-bot",
   "description": "GraphQL Client automated tasks processor",
   "main": "index",
-  "version": "0.2.1",
+  "version": "0.1.0",
   "repository": {
     "type": "git",
     "url": "http://github.com/restorecommerce/gql-bot.git"
@@ -17,39 +17,38 @@
   ],
   "dependencies": {
     "graphql-request": "^1.8.2",
-    "js-yaml": "^3.13.0",
+    "js-yaml": "^3.13.1",
     "lodash": "^4.17.11",
     "memorystream": "^0.3.1",
     "promise-streams": "^2.1.1",
-    "query-string": "^6.4.2",
-    "readdirp": "^2.2.1",
+    "query-string": "^6.5.0",
+    "readdirp": "^3.0.2",
     "through2": "^3.0.1",
-    "typescript": "^3.4.1",
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^11.13.0",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.0.4",
     "@types/should": "^13.0.0",
-    "coveralls": "^3.0.3",
+    "nyc": "^14.1.1",
     "istanbul": "^0.4.5",
-    "mocha": "^6.0.2",
+    "mocha": "^6.1.4",
     "nock": "^10.0.6",
     "should": "^13.2.3",
-    "tslint": "^5.15.0",
-    "typescript": "^3.4.1"
+    "tslint": "^5.17.0",
+    "typescript": "^3.5.1"
   },
   "scripts": {
     "tsctests": "tsc test/*.ts --module commonjs -target ES6",
     "pretest": "npm run tsctests && npm run lint",
-    "test": "npm run mocha",
+    "test": "nyc mocha",
     "lint": "tslint *.ts",
     "postinstall": "tsc -d && npm run lint",
     "mocha": "mocha --timeout 5000 ./test/*.js --trace-warnings",
     "mocha-debug": "mocha -R spec test/*.js --full-trace --inspect-brk",
-    "coveralls": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec ./test/*.js"
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "engines": {
-    "node": ">= 9.2.0"
+    "node": ">= 10.0.0"
   }
 }
