--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@restorecommerce/gql-bot",
   "description": "GraphQL Client automated tasks processor",
-  "main": "index",
+  "main": "lib/index",
   "version": "0.1.0",
   "repository": {
     "type": "git",
@@ -21,19 +21,20 @@
     "lodash": "^4.17.11",
     "memorystream": "^0.3.1",
     "promise-streams": "^2.1.1",
-    "query-string": "^6.5.0",
+    "query-string": "^6.6.0",
     "readdirp": "^3.0.2",
     "through2": "^3.0.1",
     "url": "^0.11.0"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.0.4",
+    "@types/node": "^12.0.5",
     "@types/should": "^13.0.0",
-    "nyc": "^14.1.1",
     "istanbul": "^0.4.5",
     "mocha": "^6.1.4",
     "nock": "^10.0.6",
+    "npm-run-all": "^4.1.5",
+    "nyc": "^14.1.1",
     "should": "^13.2.3",
     "tslint": "^5.17.0",
     "typescript": "^3.5.1"
@@ -42,8 +43,11 @@
     "tsctests": "tsc test/*.ts --module commonjs -target ES6",
     "pretest": "npm run tsctests && npm run lint",
     "test": "nyc mocha",
-    "lint": "tslint *.ts",
-    "postinstall": "tsc -d && npm run lint",
+    "lint": "tslint './src/**/*.ts'",
+    "build:tsc": "tsc -d",
+    "build:clean": "rimraf lib",
+    "build": "npm-run-all lint build:clean build:tsc",
+    "postinstall": "tsc -d",
     "mocha": "mocha --timeout 5000 ./test/*.js --trace-warnings",
     "mocha-debug": "mocha -R spec test/*.js --full-trace --inspect-brk",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
