--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "noUnusedLocals": false,
-    "strict": true,
+    "strict": false,
     "outDir": "lib",
     "typeRoots": [
       "node_modules/@types"
