--- a/package.json
+++ b/package.json
@@ -18,31 +18,33 @@
   "dependencies": {
     "graphql-request": "^1.8.2",
     "js-yaml": "^3.13.1",
-    "lodash": "^4.17.14",
+    "lodash": "^4.17.15",
     "memorystream": "^0.3.1",
     "promise-streams": "^2.1.1",
-    "query-string": "^6.8.1",
-    "readdirp": "^3.1.1",
+    "query-string": "^6.9.0",
+    "readdirp": "^3.3.0",
     "through2": "^3.0.1",
     "url": "^0.11.0"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.0.5",
+    "@types/node": "^13.1.2",
     "@types/should": "^13.0.0",
-    "mocha": "^6.1.4",
-    "nock": "^10.0.6",
+    "mocha": "^6.2.2",
+    "nock": "^11.7.0",
     "npm-run-all": "^4.1.5",
-    "nyc": "^14.1.1",
+    "nyc": "^15.0.0",
     "should": "^13.2.3",
-    "tslint": "^5.17.0",
-    "typescript": "^3.5.1"
+    "eslint": "^6.7.0",
+    "@typescript-eslint/eslint-plugin": "^2.8.0",
+    "@typescript-eslint/parser": "^2.8.0",
+    "typescript": "^3.7.4"
   },
   "scripts": {
     "tsctests": "tsc test/*.ts --module commonjs -target ES6",
     "pretest": "npm run tsctests && npm run lint",
     "test": "nyc mocha",
-    "lint": "tslint './src/**/*.ts'",
+    "lint": "eslint './src/**/*.ts'",
     "build:tsc": "tsc -d",
     "build:clean": "rimraf lib",
     "build": "npm-run-all lint build:clean build:tsc",
@@ -52,6 +54,6 @@
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "engines": {
-    "node": ">= 10.0.0"
+    "node": ">= 12.0.0"
   }
 }
