--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "noUnusedLocals": false,
-    "strict": false,
+    "skipLibCheck": false,
     "outDir": "lib",
     "typeRoots": [
       "node_modules/@types"
@@ -19,9 +19,7 @@
   "exclude": [
     "node_modules",
     "lib",
-    "doc"
-  ],
-  "lib": [
-    "esnext",
+    "doc",
+    "**/*.test.ts"
   ]
 }
