--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "processor"
   ],
   "dependencies": {
-    "graphql-request": "^1.8.2",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-http": "^1.5.16",
+    "apollo-upload-client": "^12.1.0",
+    "graphql": "^14.5.8",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "memorystream": "^0.3.1",
