--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "apollo-link-http": "^1.5.16",
     "apollo-upload-client": "^12.1.0",
     "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "memorystream": "^0.3.1",
+    "node-fetch": "^2.6.0",
     "promise-streams": "^2.1.1",
     "query-string": "^6.9.0",
     "readdirp": "^3.3.0",
