--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@restorecommerce/gql-bot",
   "description": "GraphQL Client automated tasks processor",
   "main": "lib/index",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "repository": {
     "type": "git",
     "url": "http://github.com/restorecommerce/gql-bot.git"
@@ -18,33 +18,34 @@
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
-    "apollo-link-http": "^1.5.16",
+    "apollo-link-http": "^1.5.17",
     "form-data": "^3.0.0",
-    "graphql": "^14.5.8",
-    "graphql-tag": "^2.10.1",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "memorystream": "^0.3.1",
     "node-fetch": "^2.6.0",
     "promise-streams": "^2.1.1",
-    "query-string": "^6.9.0",
-    "readdirp": "^3.3.0",
+    "query-string": "^6.12.1",
+    "readdirp": "^3.4.0",
     "through2": "^3.0.1",
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^13.1.2",
+    "@types/mocha": "^7.0.2",
+    "@types/node": "^13.11.1",
     "@types/should": "^13.0.0",
-    "mocha": "^6.2.2",
-    "nock": "^11.7.0",
-    "npm-run-all": "^4.1.5",
-    "nyc": "^15.0.0",
-    "should": "^13.2.3",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "coveralls": "^3.0.11",
     "eslint": "^6.7.0",
-    "@typescript-eslint/eslint-plugin": "^2.8.0",
-    "@typescript-eslint/parser": "^2.8.0",
-    "typescript": "^3.7.4"
+    "mocha": "^7.1.1",
+    "nock": "^12.0.3",
+    "npm-run-all": "^4.1.5",
+    "nyc": "^15.0.1",
+    "should": "^13.2.3",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "tsctests": "tsc test/*.ts --module commonjs -target ES6",
